# gallery-wall-organiser

./: README.md  pyproject.toml
src/gallery_wall_organiser/: __init__.py  cli.py  geometry.py  models.py  solver.py  visualizer.py
tests/: test_cli.py  test_geometry.py  test_integration.py  test_models.py  test_solver.py  test_visualizer.py
