[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gallery-wall-organiser"
version = "0.1.0"
description = "Automatically arrange photos on a gallery wall for visual balance."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "shapely>=2.0",
]

[project.scripts]
gallery-wall-organiser = "gallery_wall_organiser.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gallery_wall_organiser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
